[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aioscryfall"
description = "Asynchronous Python client for the Scryfall API"
dynamic = ["version"]
readme = "README.rst"
authors = [
    {name = "George Leslie-Waksman", email ="waksman@gmail.com"},
]
requires-python = ">=3.11"
keywords = [
    "mtg",
    "magic",
    "scryfall",
]
license = {text = "MIT"}
dependencies = [
    "aiohttp",
    "appdirs",
    "msgspec",
    "requests-cache",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/gwax/aioscryfall"
"Bug Tracker" = "https://github.com/gwax/aioscryfall/issues"

[project.optional-dependencies]
dev = [
    "aioresponses",
    "black",
    "doc8",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-mutable",
    "flake8-pyproject",
    "isort",
    "mypy",
    "Pygments",
    "pylint",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["aioscryfall"]

[tool.setuptools_scm]
write_to = "aioscryfall/_version.py"
local_scheme = "no-local-version"

[tool.mypy]
python_version = "3.11"

follow_imports = "normal"
disallow_untyped_defs = true
allow_untyped_globals = false

[tool.flake8]
ignore = ["E203", "E501", "F401", "W503"]
max_complexity = 10
exclude = [".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselected by default; select with '-m integration')",
]
addopts = "-m \"not integration\""
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
atomic = true
line_length = 88
known_first_party = [
    "aioscryfall",
    "tests",
]
